# sitebuilder

./: .gitignore  CREDITS  Cargo.toml  LICENSE  package-lock.json  package.json  postcss.config.js  sitebuilder.toml  tailwind.config.js  tsconfig.json  webpack.config.js
src/: build.rs  bundle.ts  clean.rs  config.toml  init.rs  main.rs  theme.toml  update.rs  util.rs
src/components/: base.pug  head.pug  misc.pug  navbar.pug
src/components/base/: avatarDropdown.pug  themeChanger.pug
src/components/misc/: hr.pug
src/components/navbar/: badgeDropdown.pug  search.pug
src/content/: _index.md
src/templates/: 404.pug  anchor-link.pug  article.html  article.pug  index.pug  list.pug  page.pug  section.pug
src/templates/includes/: tera.pug
src/util/: classes.pug
util/: paths.json  tooling.ts
